adicionando pipe e validação ao cpf e cnpj

--- a/cadastro-produtor-rural/src/app/components/pages/register/register.component.css
+++ b/cadastro-produtor-rural/src/app/components/pages/register/register.component.css
@@ -19,3 +19,20 @@
   flex-direction: column;
 }
 
+.content-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+/* .content-farm {
+
+}
+
+.content-arable {
+
+}
+
+.content-vegetation {
+
+} */
+
