--- a/cadastro-produtor-rural/src/app/components/pages/home/home.component.css
+++ b/cadastro-produtor-rural/src/app/components/pages/home/home.component.css
@@ -15,13 +15,14 @@
   cursor: pointer;
   width: 20rem;
   height: 5rem;
-  background-color: #48a1af;
+  background-color: #585B09;
   grid-column: 3;
   grid-row: 2;
   justify-self: center;
   align-self: center;
   transition: 0.3s ease;
   font-size: 1.3rem;
+  color: white;
 }
 
 .button-register:hover {
