--- a/cadastro-produtor-rural/src/app/components/pages/register/register.component.html
+++ b/cadastro-produtor-rural/src/app/components/pages/register/register.component.html
@@ -2,19 +2,17 @@
   <h1>Realize seu cadastro</h1>
   <form [formGroup]="form">
     <div class="content-form">
-      <label for="cpfCnpjField">CPF ou CNPJ</label>
+      <label for="cpfCnpj">CPF ou CNPJ</label>
       <input
-        type="string"
-        id="cpfCnpjField"
+        type="text"
+        id="cpfCnpj"
         class="input"
         formControlName="cpfCnpjField"
-        [ngModel]="cpfCnpjField | cpfCnpjFormat"
-        (ngModelChange)="cpfCnpjField=$event"
+        [value]="form.get('cpfCnpjField')?.value | cpfCnpjFormat"
         (input)="onInputChange($event)"
       >
       <div *ngIf="form.get('cpfCnpjField')?.errors && form.get('cpfCnpjField')?.touched && !(form.get('cpfCnpjField')?.dirty)" class="errors">Campo obrigatório</div>
-      <div *ngIf="form.get('cpfCnpjField')?.errors?.['cpfCnpjInvalido'] && form.get('cpfCnpjField')?.dirty">CPF ou CNPJ inválido.</div>
-
+      <div *ngIf="form.get('cpfCnpjField')?.errors?.['cpfCnpjInvalido'] && form.get('cpfCnpjField')?.dirty" class="errors">CPF ou CNPJ inválido.</div>
     </div>
 
     <div class="content-form">
@@ -23,9 +21,9 @@
         type="text"
         id="name"
         class="input"
-        formControlName="name"
+        formControlName="producerName"
       >
-      <div *ngIf="form.get('name')?.errors && form.get('name')?.touched">Campo obrigatório</div>
+      <div *ngIf="form.get('producerName')?.errors && form.get('producerName')?.touched" class="errors">Campo obrigatório</div>
     </div>
 
     <div class="content-form">
@@ -36,24 +34,24 @@
         class="input"
         formControlName="farmName"
       >
-      <div *ngIf="form.get('farmName')?.errors && form.get('farmName')?.touched">Campo obrigatório</div>
+      <div *ngIf="form.get('farmName')?.errors && form.get('farmName')?.touched" class="errors">Campo obrigatório</div>
     </div>
 
     <div class="content-selects">
       <div class="content-select-state">
         <label for="state">Estado</label>
-        <select [(ngModel)]="selectedState" id="state" formControlName="state" (change)="onStateChange()" class="selecteState">
+        <select id="state" formControlName="state" class="custom-select">
           <option *ngFor="let state of states" [value]="state">{{ state }}</option>
         </select>
-        <div *ngIf="form.get('state')?.errors && form.get('state')?.touched">Campo obrigatório</div>
+        <div *ngIf="form.get('state')?.errors && form.get('state')?.touched" class="errors">Campo obrigatório</div>
       </div>
 
       <div class="content-select-city">
         <label for="city">Cidade</label>
-        <select [(ngModel)]="selectedCity" class="selecteCity">
+        <select id="city" formControlName="city" class="custom-select">
           <option *ngFor="let city of cities" [value]="city">{{ city }}</option>
         </select>
-        <div *ngIf="form.get('city')?.errors && form.get('city')?.touched">Campo obrigatório</div>
+        <div *ngIf="form.get('city')?.errors && form.get('city')?.touched" class="errors">Campo obrigatório</div>
       </div>
     </div>
 
@@ -66,12 +64,10 @@
           class="input-area"
           formControlName="farmArea"
         >
-        <div *ngIf="form.get('farmArea')?.errors && form.get('farmArea')?.touched">Campo obrigatório</div>
+        <div *ngIf="form.get('farmArea')?.errors && form.get('farmArea')?.touched" class="errors">Campo obrigatório</div>
       </div>
 
       <div class="content-arable">
-        <!-- •	A soma de área agricultável e vegetação, não deverá ser maior que a área total da fazenda -->
-        <!-- area agricultavel em hectares -->
         <label for="arable-area">Área agricultável <br>(em hectares)</label>
         <input
           type="sting"
@@ -79,12 +75,10 @@
           class="input-area"
           formControlName="arableArea"
         >
-        <div *ngIf="form.get('arableArea')?.errors && form.get('arableArea')?.touched">Campo obrigatório</div>
+        <div *ngIf="form.get('arableArea')?.errors && form.get('arableArea')?.touched" class="errors">Campo obrigatório</div>
       </div>
 
       <div class="content-vegetation">
-        <!-- •	A soma de área agricultável e vegetação, não deverá ser maior que a área total da fazenda -->
-        <!-- area de vegetação em hectares -->
         <label for="vegetation-area">Área de vegetação <br>(em hectares)</label>
         <input
           type="string"
@@ -92,26 +86,49 @@
           class="input-area"
           formControlName="vegetationArea"
         >
-        <div *ngIf="form.get('vegetationArea')?.errors && form.get('vegetationArea')?.touched">Campo obrigatório</div>
+        <div *ngIf="form.get('vegetationArea')?.errors && form.get('vegetationArea')?.touched" class="errors">Campo obrigatório</div>
       </div>
     </div>
 
-    <!-- culturas plantadas, caixa box para seleção com as oções  Soja, Milho, Algodão, Café, Cana de Açucar-->
-    <!-- •	Cada produtor pode plantar mais de uma cultura em sua Fazenda. -->
-    <!-- <div class="content-planted-crops">
-      <p>Culturas Plantadas</p>
-      <div *ngFor="let crop of plantedCrops">
-        <label for="planted-crops">
-            <input
-              type="checkbox"
-              class="input"
-              [formControlName]="plantedCrops.value"
-            > {{ plantedCrops.label }}
-        </label>
-      </div>
-
-      <div *ngIf="form.get('plantedCrops')?.errors && form.get('plantedCrops')?.touched">Campo obrigatório</div>
-    </div> -->
+    <div class="content-planted-crops">
+      <p>Culturas Plantadas:</p>
+      <label for="planted-crops-milho" class="custom-checkbox">
+        <input
+          type="checkbox"
+          formControlName="plantedCrops"
+          id="planted-crops-milho"
+        >Milho
+      </label>
+      <label for="planted-crops-soja" class="custom-checkbox">
+        <input
+          type="checkbox"
+          formControlName="plantedCrops"
+          id="planted-crops-soja"
+        >Soja
+      </label>
+      <label for="planted-crops-trigo" class="custom-checkbox">
+        <input
+          type="checkbox"
+          formControlName="plantedCrops"
+          id="planted-crops-trigo"
+        >Trigo
+      </label>
+      <label for="planted-crops-algodao" class="custom-checkbox">
+        <input
+          type="checkbox"
+          formControlName="plantedCrops"
+          id="planted-crops-algodao"
+        >Algodão
+      </label>
+      <label for="planted-crops-check" class="custom-checkbox">
+        <input
+          type="checkbox"
+          formControlName="plantedCrops"
+          id="planted-crops-mandioca"
+        >Mandioca
+      </label>
+      <div *ngIf="form.get('plantedCrops')?.errors && form.get('plantedCrops')?.touched" class="errors">Campo obrigatório</div>
+    </div>
 
     <div class="buttons">
       <button class="button-register" (click)="register()">Cadastrar</button>
@@ -120,3 +137,18 @@
 
   </form>
 </section>
+
+<!--
+  BUGS
+
+  - Esta valindando CPF, mas não esta validando CNPJ
+
+  - As cidades não estão vindo conforme o estado
+
+  - Validação da area da fazenda em hectares
+  - Validação da area de vegetação em hectares
+  - Validação da area agricultavel em hectares
+
+  - Checkbox com opções de culturas
+  - Validação das culturas selecionadas
+ -->
