alterando arquivos de estilização

--- a/cadastro-produtor-rural/src/app/components/pages/register/register.component.scss
+++ b/cadastro-produtor-rural/src/app/components/pages/register/register.component.scss
@@ -110,7 +110,7 @@
     flex-direction: column;
   }
 
-  .content-arable, .content-vegetation {
+  .content-arable, .content-vegetation, .content-select-city {
     margin-top: 20px;
   }
 }
