--- a/cadastro-produtor-rural/src/app/components/pages/register/register.component.scss
+++ b/cadastro-produtor-rural/src/app/components/pages/register/register.component.scss
@@ -49,7 +49,6 @@
 
 .custom-select {
   font-family: Arial, sans-serif;
-  font-size: 14px;
   border: none;
   height: 60px;
   width: 400px;
@@ -59,6 +58,10 @@
   display: flex;
   flex-direction: column;
 }
+
+// .custom-select:focus {
+//   text-align: center;
+// }
 
 .custom-checkbox input{
   margin-right: 10px;
