--- a/cadastro-produtor-rural/src/app/components/header/header.component.scss
+++ b/cadastro-produtor-rural/src/app/components/header/header.component.scss
@@ -1,12 +1,19 @@
 .header {
   background-color: #e2bd86;
-  padding: 1rem 2rem;
   position: fixed;
   width: 100%;
+  height: 80px;
   top: 0;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+}
+
+.logo-title{
   display: flex;
   align-items: center;
 }
+
 .header h1{
   color: white;
   margin-left: 1rem;
@@ -20,4 +27,32 @@
 .header a {
   text-decoration: none;
 }
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  margin-right: 40px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #585b09;
+}
+
 
