adicionando componente de lista de produtores

--- a/cadastro-produtor-rural/src/app/components/pages/register/register.component.html
+++ b/cadastro-produtor-rural/src/app/components/pages/register/register.component.html
@@ -127,6 +127,7 @@
 <!--
   Funcionalidade faltantes:
   - Culturas selecionadas devem vim com os nomes que foram registrados na label e não como true ou false
+  - Criar um alert no cancelar, pedindo confirmação de cancelamento do cadastro
 
   Layout
   - Estilizar as String dos selects depois que a opção é selecionada
