--- a/cadastro-produtor-rural/src/app/components/pages/producer-list/producer-list.component.html
+++ b/cadastro-produtor-rural/src/app/components/pages/producer-list/producer-list.component.html
@@ -18,8 +18,8 @@
             <p class="item-list"><strong>Culturas Platadas:</strong> {{ item.plantedCrops }}</p>
           </div>
           <div class="buttons">
-            <button class="button-edit">
-              <img src="../../../../assets/img/icone-edit.png" alt="Ícone de editar">
+            <button class="button-edit" >
+              <img src="../../../../assets/img/icone-edit.png" routerLink="/register/edit-register/{{register.id}}"  alt="Ícone de editar">
             </button>
             <button class="button-delete" >
               <img src="../../../../assets/img/icone-delete.png" alt="Ícone de excluir">
