arrumando lógica das culturas Plantandas da lista

--- a/cadastro-produtor-rural/src/app/components/pages/edit-register/edit-register.component.html
+++ b/cadastro-produtor-rural/src/app/components/pages/edit-register/edit-register.component.html
@@ -1,5 +1,5 @@
 <section class="form ff-inter">
-  <h1>Realize seu cadastro</h1>
+  <h1>Edite seu cadastro</h1>
   <form [formGroup]="form">
     <div class="content-form">
       <label for="cpfCnpj">CPF ou CNPJ</label>
