--- a/cadastro-produtor-rural/src/app/components/pages/producer-list/producer-list.component.html
+++ b/cadastro-produtor-rural/src/app/components/pages/producer-list/producer-list.component.html
@@ -1,4 +1,4 @@
-<section class="content-list">
+<section class="content-list ff-inter">
   <h2>Produtores Rurais Cadastrados:</h2>
   <div *ngIf="registeredItems.length > 0">
     <div *ngFor="let register of registeredItems">
