--- a/cadastro-produtor-rural/src/app/components/producer/producer.component.html
+++ b/cadastro-produtor-rural/src/app/components/producer/producer.component.html
@@ -1,4 +1,4 @@
-<div class="content-register .ff-roboto-mono">
+<div class="content-register ff-inter">
   <ul>
       <li class="itens-list">
         <div>
@@ -12,7 +12,7 @@
           <p class="item-list"><strong>Área total da Fazenda:</strong> {{ register.farmArea }}</p>
           <p class="item-list"><strong>Área agricultavel:</strong> {{ register.arableArea }}</p>
           <p class="item-list"><strong>Área de vegetação: </strong>{{ register.vegetationArea }}</p>
-          <p class="item-list"><strong>Culturas Platadas:</strong> {{ register.plantedCrops }}</p>
+          <p class="item-list"><strong>Culturas Platadas:</strong> {{ plantedCropsValue }}</p>
         </div>
         <div class="buttons">
           <button class="button-edit" >
